# SimpleWebBrowser

./: CMakeLists.txt
browser/: CMakeLists.txt  browser_wnd.cpp  browser_wnd.h  html_loader.cpp  html_loader.h  main.cpp
browser_gtest/: CMakeLists.txt  test.cpp
